# Tools

./: .gitignore  CMakeLists.txt  CMakePresets.json  Defines.h  Definitions.h  Doxyfile  LICENSE  Memory.h  README.md  TODO.txt  Testing.h  TypeTraits.h  Utils.h  ValueLock.h
benchmarks/: CMakeLists.txt  ValueLockBenchmark.cpp
cmake/: NickSVToolsConfig.cmake.in
doc/doxy/: Doxyfile
examples/: CMakeLists.txt  MatrixExample.cpp  ValueLockExample.cpp
experimental/: TypeIntegrity.h
include/NickSV/Tools/: Definitions.h  Matrix.h  Memory.h  TypeTraits.h  Utils.h  ValueLock.h
include/NickSV/Tools/experimental/: BigInt.h  String.h  TypeIntegrity.h
tests/: CMakeLists.txt  MatrixTest.cpp  MemoryTest.cpp  TypeTraitsTest.cpp  ValueLockTest.cpp
